--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   hooks:
   - id: check-added-large-files
   - id: check-case-conflict
+  - id: check-toml
   - id: check-yaml
   - id: end-of-file-fixer
   - id: mixed-line-ending
@@ -14,3 +15,5 @@ repos:
   hooks:
   - id: pretty-format-yaml
     args: [--autofix, --indent, '2']
+  - id: pretty-format-toml
+    args: [--autofix]
