--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   hooks:
   - id: check-added-large-files
   - id: check-case-conflict
+  - id: check-ast
   - id: check-toml
   - id: check-yaml
   - id: end-of-file-fixer
@@ -17,3 +18,25 @@ repos:
     args: [--autofix, --indent, '2']
   - id: pretty-format-toml
     args: [--autofix]
+- repo: https://github.com/asottile/reorder_python_imports
+  rev: v3.8.2
+  hooks:
+  - id: reorder-python-imports
+- repo: https://github.com/psf/black
+  rev: 22.8.0
+  hooks:
+  - id: black
+- repo: local
+  hooks:
+  - id: pylint
+    name: PyLint
+    entry: pylint
+    language: system
+    files: \.py$
+- repo: local
+  hooks:
+  - id: mypy
+    name: MyPy
+    entry: mypy
+    language: system
+    files: \.py$
