--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,20 @@ readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
+    "mypy==0.971",
     "pre-commit==2.20.0",
+    "pylint==2.15.3",
+    "pytest==7.1.3",
     "tox==3.26.0",
-    "pytest==7.1.3"
 ]
+
+[tool.black]
+line-length = 120
+
+[tool.mypy]
+strict = true
+
+[tool.pylint]
+disable = ["C0114", "C0116"]
+good-names = ["f"]
+max-line-length = 120
