Migrate pre-commit hooks to Python, for more complex logic.

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,7 +1,7 @@
 - id: scalafmt
   name: scalafmt
-  entry: sbt
+  language: python
+  entry: run-sbt-command
   args: [scalafmt]
-  language: system
   pass_filenames: false
   description: Format scala code
