--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dev = [
     "pre-commit==2.20.0",
     "pylint==2.15.3",
     "pytest==7.1.3",
+    "pytest-asyncio==0.19.0",
     "tox==3.26.0",
 ]
 
