--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
   rev: v3.8.2
   hooks:
   - id: reorder-python-imports
+    args: [--application-directories, src/]
 - repo: https://github.com/psf/black
   rev: 22.8.0
   hooks:
