--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ strict = true
 
 [tool.pylint]
 disable = ["C0114", "C0115", "C0116"]
-good-names = ["f"]
+good-names = ["f", "fp", "ex"]
 max-line-length = 120
 
 [tool.setuptools.package-data]
