--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dev = [
     "pylint==2.15.3",
     "pytest==7.1.3",
     "pytest-asyncio==0.19.0",
+    "pytest-bdd==6.1.1",
     "tox==3.26.0",
 ]
 
