--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,6 +2,6 @@
   name: scalafmt
   language: python
   entry: run-sbt-command
-  args: [--command, set ThisBuild / scalafmtFilter := "diff-dirty"; scalafmt]
-  pass_filenames: false
+  args: [--command, scalafmtOnly]
+  pass_filenames: true
   description: Format scala code
