--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pre-commit-sbt"
-version = "0.0.1beta"
+version = "1.0.0"
 description = "A set of pre-commit hooks which integrate well with SBT (for scala)."
 readme = "README.md"
 
